# routes/web.php
@@ -28,6 +28,7 @@ use App\Http\Controllers\Admin\ReceptionTimesController;
 use App\Http\Controllers\Admin\PlansController;
 use App\Http\Controllers\Admin\DiscussionsController;
 use App\Http\Controllers\Admin\IndicatorsController;
+use App\Http\Controllers\Admin\ParksController;
 /*
 |--------------------------------------------------------------------------
 | Web Routes
@@ -97,6 +98,7 @@ Route::middleware(['auth'])->prefix('admin')->name('admin.')->group(function(){
     Route::resource('plans', PlansController::class);
     Route::resource('discussions', DiscussionsController::class);
     Route::resource('indicators', IndicatorsController::class);
+    Route::resource('parks', ParksController::class);
 
     Route::resource('settings', 'App\Http\Controllers\Admin\SettingsController');
     Route::get('generator', ['uses' => '\Appzcoder\LaravelAdmin\Controllers\ProcessController@getGenerator'])->name('generator');
@@ -105,4 +107,5 @@ Route::middleware(['auth'])->prefix('admin')->name('admin.')->group(function(){
 });
 
 require __DIR__.'/auth.php';
+
 
